--- a/styles.css
+++ b/styles.css
@@ -80,21 +80,32 @@ header,
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
+  width: 100%;
+  height: 100%;
 }
 
 .carousel-wrapper {
   width: 100%;
-  max-width: 100vw;
+  /* max-width: 100vw; */
+  height: auto;
+  max-height: 300px;
+  /* aspect-ratio: 4 / 3; */
   -webkit-overflow-scrolling: touch;
-  display: inline-block;
+  /* display: inline-block; */
   overflow: hidden;
   position: relative;
 }
 
 .product-image {
-  max-height: 300px;
-  min-width: 100%;
+  width: 100%;
+  height: auto;
   object-fit: cover;
+  object-position: center top;
+  display: none;
+}
+
+.product-image.active {
+  display: block;
 }
 
 .arrows {
@@ -120,14 +131,6 @@ header,
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.product-image {
-  display: none;
-}
-
-.product-image.active {
-  display: block;
 }
 
 .button-section {
@@ -439,15 +442,19 @@ li > a {
 
   .product-image {
     width: 100%;
-
     object-fit: cover;
     border-radius: 15px;
+    object-position: center top;
+  }
+
+  #image-1 {
     object-position: center;
-    height: 100%;
   }
 
   .carousel {
     height: 100%;
+    width: 100%;
+    display: flex;
   }
 
   .carousel-wrapper {
@@ -549,10 +556,6 @@ li > a {
     padding-bottom: 2rem;
   }
 
-  .carousel-wrapper {
-    margin-top: 6rem;
-  }
-
   #image-1 {
     min-height: 448px;
     width: 445px;
@@ -607,9 +610,13 @@ li > a {
     display: block;
   }
 
+  .carousel-wrapper {
+    max-height: 445px;
+    margin-top: 6rem;
+  }
+
   .carousel .product-image {
     width: 100%;
-    height: auto;
     border-radius: 10px;
     object-fit: cover;
   }
